--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="txt_priority">Priority</string>
     <string name="txt_date">Date</string>
     <string name="txt_description">Description</string>
+    <string name="txt_add">Add</string>
+    <string name="txt_detail">Detail</string>
+    <string name="txt_update">Update</string>
 </resources>
