--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,11 @@
     <string name="txt_add">Add</string>
     <string name="txt_detail">Detail</string>
     <string name="txt_update">Update</string>
+    <string name="txt_search">Search</string>
+    <string name="txt_sort">Sort</string>
+    <string name="txt_priority_high">Priority High</string>
+    <string name="txt_priority_low">Priority Low</string>
+    <string name="txt_delete_all">Delete All</string>
+    <string name="content_fab_add_a_note">Fab add note</string>
+    <string name="content_image_no_data">No Data</string>
 </resources>
