--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="txt_delete_all">Delete All</string>
     <string name="content_fab_add_a_note">Fab add note</string>
     <string name="content_image_no_data">No Data</string>
+    <string name="txt_save">Save</string>
 </resources>
